--- a/index.html
+++ b/index.html
@@ -48,6 +48,52 @@
     </div>
   </section>
 <hr>
+<section class="text-gray-600 body-font">
+  <div class="container px-5 py-24 mx-auto">
+    <div class="flex flex-wrap w-full mb-20">
+      <div class="lg:w-1/2 w-full mb-6 lg:mb-0">
+        <h1 class="sm:text-3xl text-2xl font-medium title-font mb-2 text-gray-900">Products avalable</h1>
+        <div class="h-1 w-20 bg-pink-500 rounded"></div>
+      </div>
+      <p class="lg:w-1/2 w-full leading-relaxed text-gray-500"></p>
+    </div>
+    <div class="flex flex-wrap -m-4">
+      <div class="xl:w-1/4 md:w-1/2 p-4">
+        <div class="bg-gray-100 p-6 rounded-lg">
+          <img class="h-40 rounded w-full object-cover object-center mb-6" src="https://5.imimg.com/data5/NJ/GH/RC/SELLER-5401922/microtek-et-648-150ah-mtek-power-tubular-battery-500x500.jpg" alt="content">
+          <h3 class="tracking-widest text-pink-500 text-xs font-medium title-font"></h3>
+          <h2 class="text-lg text-gray-900 font-medium title-font mb-4">₹12,000</h2>
+          <p class="leading-relaxed text-base">Mtek power ET648+</p>
+        </div>
+      </div>
+      <div class="xl:w-1/4 md:w-1/2 p-4">
+        <div class="bg-gray-100 p-6 rounded-lg">
+          <img class="h-40 rounded w-full object-cover object-center mb-6" src="https://okayapower.com/buy/uploads/media/2018/02/15/EB1900_I.jpg" alt="content">
+          <h3 class="tracking-widest text-pink-500 text-xs font-medium title-font"></h3>
+          <h2 class="text-lg text-gray-900 font-medium title-font mb-4">₹11,000</h2>
+          <p class="leading-relaxed text-base">Mtek Power EB1900</p>
+        </div>
+      </div>
+      <div class="xl:w-1/4 md:w-1/2 p-4">
+        <div class="bg-gray-100 p-6 rounded-lg">
+          <img class="h-40 rounded w-full object-cover object-center mb-6" src="https://5.imimg.com/data5/SK/HT/DC/SELLER-9683823/luminous-batteries-500x500.jpg" alt="content">
+          <h3 class="tracking-widest text-pink-500 text-xs font-medium title-font"></h3>
+          <h2 class="text-lg text-gray-900 font-medium title-font mb-4">₹13,500</h2>
+          <p class="leading-relaxed text-base">Lumnious EC18036</p>
+        </div>
+      </div>
+      <div class="xl:w-1/4 md:w-1/2 p-4">
+        <div class="bg-gray-100 p-6 rounded-lg">
+          <img class="h-40 rounded w-full object-cover object-center mb-6" src="https://th.bing.com/th/id/R.0c6ec1689defaacca7a60d457357ed70?rik=fzm9POOHdTEGJw&riu=http%3a%2f%2fwww.dcpowersolution.in%2fupload_images%2fproduct%2fthumb%2ftiny%2f16117783330.jpg&ehk=0c5YZj%2buHi%2fn%2bUD6kUE3RSAzyglQLh33r82eS9fpG7U%3d&risl=&pid=ImgRaw&r=0" alt="content">
+          <h3 class="tracking-widest text-pink-500 text-xs font-medium title-font"></h3>
+          <h2 class="text-lg text-gray-900 font-medium title-font mb-4">₹12,400</h2>
+          <p class="leading-relaxed text-base">Livgaurd IT1554</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<hr>
   <section class="text-gray-600 body-font relative">
     <div class="absolute inset-0 bg-gray-300">
       <iframe width="100%" height="100%" frameborder="0" marginheight="0" marginwidth="0" title="map" scrolling="no" src="https://maps.google.com/maps?width=100%&height=600&hl=en&q=%C4%B0zmir+(My%20Business%20Name)&ie=UTF8&t=&z=14&iwloc=B&output=embed" style="filter: grayscale(1) contrast(1.2) opacity(0.4);"></iframe>
