--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </a>
             <ul>
                 <li><a href="/">Home</a></li>
-                <li><a href="#">About</a></li>
+                <li><a href="/blogpost.html">About</a></li>
                 <li><a href="/contact.html">Contact</a></li>
             </ul>
         </div>
@@ -43,7 +43,7 @@
             <p>Phone No. - 8935010101,9336289136</p>
         </div>
         <div class="content-right">
-            <img src="img/home.svg" alt="iBlog">
+            <img src="img/11.png" alt="iBlog">
         </div>
     </div>
 
