--- a/products.html
+++ b/products.html
@@ -2,24 +2,22 @@
 <html lang="en">
 
 <head>
+    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <link rel="icon" href="images/main-logo.png">
     <title>New India Battery</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
 </head>
 
 <body>
-    <div class="header">
         <div class="container">
             <div class="navbar">
                 <div class="logo">
                     <a href="index.html">
-                        <img src="images/main-logo.png" alt="" / width="125px">
-                    </a>
+                    <img src="images/main-logo.png" alt="" / width="125px">
+                </a>
                 </div>
-                
                 <nav>
                     <ul id="MenuItems">
                         <li><a href="index.html">Home</a></li>
@@ -35,50 +33,27 @@
                 </a>
                 <img src="images/menu.png" alt="" class="menu-icon" onclick="menutoggle()">
             </div>
-            <div class="row">
-                <div class="col-2">
-                    <h1>Change your Battery, <br />Change your Story.</h1>
-                    <p>
-                        When words becomes dark , I shall wait for Light.<br />When
-                        Images becomes inadequate, I shall be content with silence.
-                    </p>
-                    <a href="products.html" class="btn">Explore Now &#8594;</a>
-                </div>
-                <div class="col-2">
-                    <img src="images/main.png" alt="" width="999">
-                </div>
-            </div>
         </div>
-    </div>
+   
 
-    <div class="categories">
-        <div class="small-container">
-            <div class="row">
-                <div class="col-3">
-                    <img src="images/category1.png" alt="" />
-                </div>
-                <div class="col-3">
-                    <img src="images/category2.png" alt="" />
-                </div>
-                <div class="col-3">
-                    <img src="images/category3.png" alt="" />
-                </div>
-            </div>
-        </div>
-    </div>
 
     <div class="small-container">
-        <h2 class="title">Inveters</h2>
+        <div class="row row-2">
+            <h2>All Products</h2>
+            <select>
+                <option>Default Sorting</option>
+                <option>Price Low to High</option>
+                <option>Price High to Low</option>
+                <option>By Popularity</option>
+                <option>By Rating</option>
+                <option>By Sale</option>
+            </select>
+        </div>
+
         <div class="row">
             <div class="col-4">
-                <a href="IN1.html">
-
-                    <img src="images/INA1.jpg" alt="" />
-                </a>
-                <a href="IN1.html">
-
-                    <h4>Super Power Digital UPS Model 900 (12V) DG</h4>
-                </a>
+                <img src="images/INA1.jpg" alt="" />
+                <h4>Super Power Digital UPS Model 900 (12V) DG</h4>
                 <div class="rating">
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
@@ -89,13 +64,8 @@
                 <p>Rs.4199</p>
             </div>
             <div class="col-4">
-                <a href="IN2.html">
-
                 <img src="images/INB1.png" alt="" />
-                </a>
-                <a href="IN2.html">
                 <h4>Luminous Zelio+ 1100 Home Pure Sinewave Inverter UPS - Black</h4>
-                </a>
                 <div class="rating">
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
@@ -106,12 +76,8 @@
                 <p>Rs.6499</p>
             </div>
             <div class="col-4">
-                <a href="IN3.html">
-                <img src="images/pro3-allen solly - 2369.png" alt="" />
-                </a>
-                <a href="IN3.html">
-                <h4>Allen Solly Shirt</h4>
-                </a>
+                <img src="images/INC1.png" alt="" />
+                <h4></h4>
                 <div class="rating">
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
@@ -122,12 +88,8 @@
                 <p>Rs.2369</p>
             </div>
             <div class="col-4">
-                <a href="IN4.html">
                 <img src="images/pro4-h&m-1499.png" alt="" />
-                </a>
-                <a href="IN4.html">
                 <h4>H&M SweatShirt</h4>
-                </a>
                 <div class="rating">
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
@@ -138,8 +100,6 @@
                 <p>Rs.1499</p>
             </div>
         </div>
-
-        <h2 class="title">Battery</h2>
         <div class="row">
             <div class="col-4">
                 <img src="images/pro5-calvinK-4199.png" alt="" />
@@ -193,7 +153,7 @@
         <div class="row">
             <div class="col-4">
                 <img src="images/pro9-dorothy perkins-1245.png" alt="" />
-                <h4>Dorothy Perkins Skirt</h4>
+                <h4>Dorothy Perkins Skirts</h4>
                 <div class="rating">
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
@@ -217,7 +177,7 @@
             </div>
             <div class="col-4">
                 <img src="images/pro11-AccessHer-39500.png" alt="" />
-                <h4>Access Her necklace</h4>
+                <h4>Access Her Necklace</h4>
                 <div class="rating">
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
@@ -240,76 +200,68 @@
                 <p>Rs.14296</p>
             </div>
         </div>
-    </div>
-    <div class="offer">
-        <div class="small-container">
-            <div class="row">
-                <div class="col-2">
-                    <img src="images/offer/shopping.png" alt="" class="offer-img" />
+        <div class="row">
+            <div class="col-4">
+                <img src="images/pro13-lacoste-2550.png" alt="" />
+                <h4>Lacoste kids T-shirt</h4>
+                <div class="rating">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star-o"></i>
                 </div>
-                <div class="col-2">
-                    <p>Exclusively Available</p>
-                    <h1>Apple watch series 5</h1>
-                    <small>
-                        With a new Always-On Retina display, Apple Watch Series 5 is
-                        always there for you. To monitor your health, help you stay fit
-                        and keep you connected.
-                    </small>
-                    <a href="#" class="btn">Buy Now &#8594;</a>
+                <p>Rs.2550</p>
+            </div>
+            <div class="col-4">
+                <img src="images/pro14-The Light Lamp-21360.png" alt="" />
+                <h4>The Light Lamp</h4>
+                <div class="rating">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star-half-o"></i>
                 </div>
+                <p>Rs.21360</p>
+            </div>
+            <div class="col-4">
+                <img src="images/pro15-harmon kardon-14990.png" alt="" />
+                <h4>Harmon Kardon Headphones</h4>
+                <div class="rating">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star-o"></i>
+                </div>
+                <p>Rs.149900</p>
+            </div>
+            <div class="col-4">
+                <img src="images/pro16-steve madden - 8999.png" alt="" />
+                <h4>Steve Madden Heels</h4>
+                <div class="rating">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star-half-o"></i>
+                    <i class="fa fa-star-o"></i>
+                </div>
+                <p>Rs.8999</p>
             </div>
         </div>
-    </div>
 
-    <div class="testimonial">
-        <div class="small-container">
-            <div class="row">
-                <div class="col-3">
-                    <i class="fa fa-quote-left"></i>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam
-                        temporibus non sapiente nemo autem illo! Ea sunt corporis officia
-                        inventore.
-                    </p>
-
-                    <img src="images/user-1.png" alt="">
-                    <h3>Harish Khemani</h3>
-                </div>
-                <div class="col-3">
-                    <i class="fa fa-quote-left"></i>
-                    <p>
-                     Son of Mr. Harish Khemani.The Developer of this website
-                    </p>
-
-                    <img src="images/user-2.png" alt="">
-                    <h3>Pranav Khemani</h3>
-                </div>
-
-            </div>
+        <div class="page-btn">
+            <span>1</span>
+            <span>2</span>
+            <span>3</span>
+            <span>4</span>
+            <span>5</span>
+            <span>&#8594;</span>
         </div>
     </div>
-
-    <div class="brands">
-        <div class="small-container">
-            <div class="row">
-                <div class="col-5">
-                    <img src="images/logo-1.png" alt="">
-                </div>
-                <div class="col-5">
-                    <img src="images/logo-2.png" alt="">
-                </div>
-                <div class="col-5">
-                    <img src="images/logo-3.png" alt="">
-                </div>
-                <div class="col-5">
-                    <img src="images/logo-4.png" alt="">
-                </div>
-                <div class="col-5">
-                    <img src="images/logo-5.png" alt="">
-                </div>
-            </div>
-        </div>
     </div>
+
 
 
     <div class="footer">
@@ -324,7 +276,6 @@
                     </div>
                 </div>
                 <div class="footer-col-2">
-                  
                     <p><h3>Address</h3> 87/4, Block No. 9, Nand Lal Chauraha, Govind Nagar, Kanpur<br>
                         <h3>Pincode</h3>208006</p>
                 </div>
@@ -367,6 +318,9 @@
             }
         }
     </script>
+
+
+
 </body>
 
 </html>
