--- a/BT1.html
+++ b/BT1.html
@@ -40,20 +40,17 @@
     <div class="small-container single-product">
         <div class="row">
             <div class="col-2">
-                <img src="images/INB1.png" alt="" width="100%" id="ProductImg">
+                <img src="images/Screenshot 2023-03-29 133547.png" alt="" width="100%" id="ProductImg">
 
                 <div class="small-img-row">
                     <div class="small-img-col">
-                        <img src="images/INB2.png" alt="" width="100%" class="small-img">
+                        <img src="images/Screenshot 2023-03-29 133547.png" alt="" width="100%" class="small-img">
                     </div>
                     <div class="small-img-col">
-                        <img src="images/INB3.png" alt="" width="100%" class="small-img">
+                        <img src="images/Screenshot 2023-03-29 133849.png" alt="" width="100%" class="small-img">
                     </div>
                     <div class="small-img-col">
-                        <img src="images/INB4.png" alt="" width="100%" class="small-img">
-                    </div>
-                    <div class="small-img-col">
-                        <img src="images/INB5.png" alt="" width="100%" class="small-img">
+                        <img src="images/Screenshot 2023-03-29 133944.png" alt="" width="100%" class="small-img">
                     </div>
 
 
@@ -61,13 +58,14 @@
 
             </div>
             <div class="col-2">
-                <p>Home / Inveters</p>
-                <h1>Luminous Zelio+ 1100 Home Pure Sinewave Inverter UPS - Black</h1>
-                <h4>Rs.6499</h4>
+                <p>Home / Batteries</p>
+                <h1>Livguard IT 1550TT Inverter Battery, 150 Ah</h1>
+                <h4>Rs.12999</h4>
                 <input type="number" value="1">
                 <a href="" class="btn">Add to Cart</a>
                 <h3>Product Details <i class="fa fa-indent"></i></h3>
                 <br>
+                <p>For a House to have the uninterrupted power during power cuts you need a reliable battery connected to your Inverter to provide the required backup. An ideal inverter battery should be able to handle frequent discharges (power cuts) and offer dependable backup over months and years to come. With ample power to run your equipment, gadgets and home appliances, Livguard’s long lasting and faster charging inverter batteries let you focus on the things that matter without interruptions. Livguard’s commercial and residential inverter batteries are designed with a superior 3D grid design and high electrolyte volume to deliver enhanced performance and longer power backup. Moreover, these low-maintenance inverter batteries make your life easier by reducing downtimes and requiring minimal care</p>
             </div>
         </div>
     </div>
