--- a/BT3.html
+++ b/BT3.html
@@ -40,20 +40,17 @@
     <div class="small-container single-product">
         <div class="row">
             <div class="col-2">
-                <img src="images/INB1.png" alt="" width="100%" id="ProductImg">
+                <img src="images/Screenshot 2023-03-29 135928.png" alt="" width="100%" id="ProductImg">
 
                 <div class="small-img-row">
                     <div class="small-img-col">
-                        <img src="images/INB2.png" alt="" width="100%" class="small-img">
+                        <img src="images/Screenshot 2023-03-29 135928.png" alt="" width="100%" class="small-img">
                     </div>
                     <div class="small-img-col">
-                        <img src="images/INB3.png" alt="" width="100%" class="small-img">
+                        <img src="images/Screenshot 2023-03-29 140253.png" alt="" width="100%" class="small-img">
                     </div>
                     <div class="small-img-col">
-                        <img src="images/INB4.png" alt="" width="100%" class="small-img">
-                    </div>
-                    <div class="small-img-col">
-                        <img src="images/INB5.png" alt="" width="100%" class="small-img">
+                        <img src="images/Screenshot 2023-03-29 140445.png" alt="" width="100%" class="small-img">
                     </div>
 
 
@@ -61,13 +58,14 @@
 
             </div>
             <div class="col-2">
-                <p>Home / Inveters</p>
-                <h1>Luminous Zelio+ 1100 Home Pure Sinewave Inverter UPS - Black</h1>
-                <h4>Rs.6499</h4>
+                <p>Home / Batteries</p>
+                <h1>Luminous Inverlast ILTJ18148 150 Ah Tall Jumbo Inverter Battery</h1>
+                <h4>Rs.12999</h4>
                 <input type="number" value="1">
                 <a href="" class="btn">Add to Cart</a>
                 <h3>Product Details <i class="fa fa-indent"></i></h3>
                 <br>
+                <p>Next generation tubular Jumbo battery with better charge acceptance and long Back up. 20% more acid volume per ampere hour than ordinary tubular batteries. It has high purity, corrosion-resistant proprietary spine alloy composition for long battery life. Extra-strong, flexible oxidation-resistant gauntlet for better performance and long life. Puncture-resistant polyethylene separator which minimize the possibility of internal short circuits. Best Solution for areas with long and frequent power cuts. Easy maintenance with level indicators.</p>
             </div>
         </div>
     </div>
