--- a/BT4.html
+++ b/BT4.html
@@ -40,20 +40,17 @@
     <div class="small-container single-product">
         <div class="row">
             <div class="col-2">
-                <img src="images/INB1.png" alt="" width="100%" id="ProductImg">
+                <img src="images/Screenshot 2023-03-29 140808.png" alt="" width="100%" id="ProductImg">
 
                 <div class="small-img-row">
                     <div class="small-img-col">
-                        <img src="images/INB2.png" alt="" width="100%" class="small-img">
+                        <img src="images/Screenshot 2023-03-29 140808.png" alt="" width="100%" class="small-img">
                     </div>
                     <div class="small-img-col">
-                        <img src="images/INB3.png" alt="" width="100%" class="small-img">
+                        <img src="images/Screenshot 2023-03-29 140847.png" alt="" width="100%" class="small-img">
                     </div>
                     <div class="small-img-col">
-                        <img src="images/INB4.png" alt="" width="100%" class="small-img">
-                    </div>
-                    <div class="small-img-col">
-                        <img src="images/INB5.png" alt="" width="100%" class="small-img">
+                        <img src="images/Screenshot 2023-03-29 140838.png" alt="" width="100%" class="small-img">
                     </div>
 
 
@@ -61,13 +58,14 @@
 
             </div>
             <div class="col-2">
-                <p>Home / Inveters</p>
-                <h1>Luminous Zelio+ 1100 Home Pure Sinewave Inverter UPS - Black</h1>
-                <h4>Rs.6499</h4>
+                <p>Home / Batteries</p>
+                <h1>OKAYA OPHT18060 TT Tubular Inverter Battery  (150 AH)</h1>
+                <h4>Rs.12499</h4>
                 <input type="number" value="1">
                 <a href="" class="btn">Add to Cart</a>
                 <h3>Product Details <i class="fa fa-indent"></i></h3>
                 <br>
+                <p>You can keep your appliances running even during power cuts with the Okaya Hadi Tall Tubular 150Ah Inverter Battery. It has a pure tubular ATT technology battery that ensures excellent performance and low maintenance. With its HPDC technology, this inverter battery ensures durability and longevity. Thanks to its water level indicator, this inverter battery lets you watch over the water level. Moreover, the tightly sealed PP container of this inverter battery ensures optimal safety.</p>
             </div>
         </div>
     </div>
