--- a/BT5.html
+++ b/BT5.html
@@ -40,20 +40,17 @@
     <div class="small-container single-product">
         <div class="row">
             <div class="col-2">
-                <img src="images/INB1.png" alt="" width="100%" id="ProductImg">
+                <img src="images/34a2e049-4f9a-4eb0-9070-dccd58e450aa_SC 18060 battery-1.png" alt="" width="100%" id="ProductImg">
 
                 <div class="small-img-row">
                     <div class="small-img-col">
-                        <img src="images/INB2.png" alt="" width="100%" class="small-img">
+                        <img src="images/34a2e049-4f9a-4eb0-9070-dccd58e450aa_SC 18060 battery-1.png" alt="" width="100%" class="small-img">
                     </div>
                     <div class="small-img-col">
-                        <img src="images/INB3.png" alt="" width="100%" class="small-img">
+                        <img src="images/2423e4dd-71c5-4b05-962c-022644392767_SC 18060 battery-2.jpg" alt="" width="100%" class="small-img">
                     </div>
                     <div class="small-img-col">
-                        <img src="images/INB4.png" alt="" width="100%" class="small-img">
-                    </div>
-                    <div class="small-img-col">
-                        <img src="images/INB5.png" alt="" width="100%" class="small-img">
+                        <img src="images/e1940193-9161-42ae-b7e6-6e552e8f227f_SC 18060 battery-3.jpg" alt="" width="100%" class="small-img">
                     </div>
 
 
@@ -61,13 +58,14 @@
 
             </div>
             <div class="col-2">
-                <p>Home / Inveters</p>
-                <h1>Luminous Zelio+ 1100 Home Pure Sinewave Inverter UPS - Black</h1>
-                <h4>Rs.6499</h4>
+                <p>Home / Batteries</p>
+                <h1>LUMINOUS SC 18060 Tubular Inverter Battery  (150Ah)</h1>
+                <h4>Rs.13499</h4>
                 <input type="number" value="1">
                 <a href="" class="btn">Add to Cart</a>
                 <h3>Product Details <i class="fa fa-indent"></i></h3>
                 <br>
+                <p>Shakti Charge is one of India's most trusted batteries. It is an ideal choice for areas with long power cuts at higher frequency. It comes with fast charging and an enhanced warranty period of 5 years. Its Tall Tubular design calls for Higher Performance and longer Back-up hours.</p>
             </div>
         </div>
     </div>
