--- a/BT6.html
+++ b/BT6.html
@@ -40,20 +40,17 @@
     <div class="small-container single-product">
         <div class="row">
             <div class="col-2">
-                <img src="images/INB1.png" alt="" width="100%" id="ProductImg">
+                <img src="images/51b027b4-73ee-4fd8-a645-5809cf152dd2_ILTT 25060 battery-1.png" alt="" width="100%" id="ProductImg">
 
                 <div class="small-img-row">
                     <div class="small-img-col">
-                        <img src="images/INB2.png" alt="" width="100%" class="small-img">
+                        <img src="images/51b027b4-73ee-4fd8-a645-5809cf152dd2_ILTT 25060 battery-1.png" alt="" width="100%" class="small-img">
                     </div>
                     <div class="small-img-col">
-                        <img src="images/INB3.png" alt="" width="100%" class="small-img">
+                        <img src="images/3f033160-e66f-4882-8eb4-2aaebc52c4c6_ILTT 25060 battery-2.png" alt="" width="100%" class="small-img">
                     </div>
                     <div class="small-img-col">
-                        <img src="images/INB4.png" alt="" width="100%" class="small-img">
-                    </div>
-                    <div class="small-img-col">
-                        <img src="images/INB5.png" alt="" width="100%" class="small-img">
+                        <img src="images/bd82e48c-8a30-49e1-9006-00547ac33077_ILTT 25060 battery-3.png" alt="" width="100%" class="small-img">
                     </div>
 
 
@@ -61,13 +58,14 @@
 
             </div>
             <div class="col-2">
-                <p>Home / Inveters</p>
-                <h1>Luminous Zelio+ 1100 Home Pure Sinewave Inverter UPS - Black</h1>
-                <h4>Rs.6499</h4>
+                <p>Home / Batteries</p>
+                <h1>LUMINOUS ILTT25060 200Ah Tall Tubular Inverter Battery  (200Ah)</h1>
+                <h4>Rs.17999</h4>
                 <input type="number" value="1">
                 <a href="" class="btn">Add to Cart</a>
                 <h3>Product Details <i class="fa fa-indent"></i></h3>
                 <br>
+                <p>Inverlast range of heavy-duty, Tall Tubular batteries are designed to support heavy load of electrical appliances during long & frequent power outages. These batteries contain special grade Lead alloy and are suitable for both HRD & SFC application. These batteries are designed with Orthogonal 3D grid for unmatched electrical performance.</p>
             </div>
         </div>
     </div>
