--- a/BT7.html
+++ b/BT7.html
@@ -40,20 +40,17 @@
     <div class="small-container single-product">
         <div class="row">
             <div class="col-2">
-                <img src="images/INB1.png" alt="" width="100%" id="ProductImg">
+                <img src="images/51IQ0cg718S.jpg" alt="" width="100%" id="ProductImg">
 
                 <div class="small-img-row">
                     <div class="small-img-col">
-                        <img src="images/INB2.png" alt="" width="100%" class="small-img">
+                        <img src="images/51IQ0cg718S.jpg" alt="" width="100%" class="small-img">
                     </div>
                     <div class="small-img-col">
-                        <img src="images/INB3.png" alt="" width="100%" class="small-img">
+                        <img src="images/21KW5jUtlvS.jpg" alt="" width="100%" class="small-img">
                     </div>
                     <div class="small-img-col">
-                        <img src="images/INB4.png" alt="" width="100%" class="small-img">
-                    </div>
-                    <div class="small-img-col">
-                        <img src="images/INB5.png" alt="" width="100%" class="small-img">
+                        <img src="images/41o5+98fkFS.jpg" alt="" width="100%" class="small-img">
                     </div>
 
 
@@ -61,13 +58,14 @@
 
             </div>
             <div class="col-2">
-                <p>Home / Inveters</p>
-                <h1>Luminous Zelio+ 1100 Home Pure Sinewave Inverter UPS - Black</h1>
-                <h4>Rs.6499</h4>
+                <p>Home / Batteries</p>
+                <h1>Livguard Invertuff IT1666TT 160AH</h1>
+                <h4>Rs.13999</h4>
                 <input type="number" value="1">
                 <a href="" class="btn">Add to Cart</a>
                 <h3>Product Details <i class="fa fa-indent"></i></h3>
                 <br>
+                <p>Built with superior plate grid design and high electrolyte volume, Livguard inverter batteries deliver enhanced performance, every single time. Our range of inverter batteries promises uninterrupted supply of electric power for long hours, which is why it is perfectly suited for Indian power conditions.</p>
             </div>
         </div>
     </div>
