--- a/BT8.html
+++ b/BT8.html
@@ -40,20 +40,14 @@
     <div class="small-container single-product">
         <div class="row">
             <div class="col-2">
-                <img src="images/INB1.png" alt="" width="100%" id="ProductImg">
+                <img src="images/Screenshot 2023-03-29 141813.png" alt="" width="100%" id="ProductImg">
 
                 <div class="small-img-row">
                     <div class="small-img-col">
-                        <img src="images/INB2.png" alt="" width="100%" class="small-img">
+                        <img src="images/Screenshot 2023-03-29 141813.png" alt="" width="100%" class="small-img">
                     </div>
                     <div class="small-img-col">
-                        <img src="images/INB3.png" alt="" width="100%" class="small-img">
-                    </div>
-                    <div class="small-img-col">
-                        <img src="images/INB4.png" alt="" width="100%" class="small-img">
-                    </div>
-                    <div class="small-img-col">
-                        <img src="images/INB5.png" alt="" width="100%" class="small-img">
+                        <img src="images/Screenshot 2023-03-29 141826.png" alt="" width="100%" class="small-img">
                     </div>
 
 
@@ -61,13 +55,15 @@
 
             </div>
             <div class="col-2">
-                <p>Home / Inveters</p>
-                <h1>Luminous Zelio+ 1100 Home Pure Sinewave Inverter UPS - Black</h1>
-                <h4>Rs.6499</h4>
+                <p>Home / Batteries
+                </p>
+                <h1>Massimo MSC 1800 36X60 TT Tubular Inverter Battery  (150Ah)</h1>
+                <h4>Rs.11999</h4>
                 <input type="number" value="1">
                 <a href="" class="btn">Add to Cart</a>
                 <h3>Product Details <i class="fa fa-indent"></i></h3>
                 <br>
+                <p>1.Massimo Batteries comes in a wide range from 100Ah to 300Ah in different containers - Jumbo and Tall Tubular. 2.Warranty range comprises from 36* to 42* months which varies in product range 3.Quick charging and better charge acceptance provide you extra backup even on longer power cut. 4.Higher efficiency - Ampere hour efficiency is more than 95%.So you save an electric bill every time your inverter charges the battery. 5.Special Selenium alloy grid, Casted at high pressure (100 bar) by pressure dye casting machine (PDC) for void free structure to provide longer life. 6.99.98% pure active material with finest quality red lead. 7.Quick charging and better charge acceptance provide you extra backup even on longer power cut. 8.Product range is factory charged and has a very low self discharge ratio.</p>
             </div>
         </div>
     </div>
