--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
                     <ul id="MenuItems">
                         <li><a href="index.html">Home</a></li>
                         <li><a href="products.html">Products</a></li>
-                        <li><a href="">About us</a></li>
-                        <li><a href="">Contacts</a></li>
                         <li><a href="account.html">Account</a></li>
+                        <li><a href="Under construction/UC.html">About us</a></li>
+                        <li><a href="Under construction/UC.html">Contacts</a></li>
                     </ul>
                 </nav>
                 <a href="Under construction/UC.html">
@@ -107,10 +107,10 @@
             </div>
             <div class="col-4">
                 <a href="IN3.html">
-                <img src="images/pro3-allen solly - 2369.png" alt="" />
+                <img src="images/jadoo-700-bg.jpg" alt="" />
                 </a>
                 <a href="IN3.html">
-                <h4>Allen Solly Shirt</h4>
+                <h4>V-Guard Jaadoo 700 Square Wave Inverter</h4>
                 </a>
                 <div class="rating">
                     <i class="fa fa-star"></i>
@@ -119,14 +119,15 @@
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star-o"></i>
                 </div>
-                <p>Rs.2369</p>
+                <p>Rs.3800</p>
             </div>
             <div class="col-4">
                 <a href="IN4.html">
-                <img src="images/pro4-h&m-1499.png" alt="" />
+                <img src="images/Livguard i2-Verter LG 1100 Square Wave Inverter.png" alt="" />
                 </a>
                 <a href="IN4.html">
-                <h4>H&M SweatShirt</h4>
+                <h4>Livguard i2-Verter LG 1100 Square Wave Inverter
+                </h4>
                 </a>
                 <div class="rating">
                     <i class="fa fa-star"></i>
@@ -135,15 +136,17 @@
                     <i class="fa fa-star-half-o"></i>
                     <i class="fa fa-star-o"></i>
                 </div>
-                <p>Rs.1499</p>
+                <p>Rs.4700</p>
             </div>
         </div>
 
         <h2 class="title">Battery</h2>
         <div class="row">
             <div class="col-4">
-                <img src="images/pro5-calvinK-4199.png" alt="" />
-                <h4>Calvin Klein Sweater</h4>
+                <a href="BT1.html">
+                <img src="images/Screenshot 2023-03-29 133547.png" alt="" />
+                </a><a href="BT1.html">
+                <h4>Livguard IT 1550TT Inverter Battery</h4></a>
                 <div class="rating">
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
@@ -151,11 +154,13 @@
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star-o"></i>
                 </div>
-                <p>Rs.4199</p>
+                <p>Rs.12999</p>
             </div>
             <div class="col-4">
-                <img src="images/pro6-SELECTED-11499.png" alt="" />
-                <h4>SELECTED Blazer</h4>
+                <a href="BT2.html">
+                <img src="images/Screenshot 2023-03-29 135234.png" alt="" /></a>
+                <a href="BT2.html">
+                <h4>Microtek Mtek Power ET648+ 150Ah (36+12)</h4></a>
                 <div class="rating">
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
@@ -163,11 +168,12 @@
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star-half-o"></i>
                 </div>
-                <p>Rs.11499</p>
+                <p>Rs.12499</p>
             </div>
             <div class="col-4">
-                <img src="images/pro7-anubhutte-988.png" alt="" />
-                <h4>Anubhutte Dress</h4>
+                <a href="BT3.html">
+                <img src="images/Screenshot 2023-03-29 135928.png" alt="" /></a><a href="BT3.html">
+                <h4>Luminous Inverlast ILTJ18148 150 Ah Tall Jumbo Inverter Battery</h4></a>
                 <div class="rating">
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
@@ -175,11 +181,12 @@
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star-o"></i>
                 </div>
-                <p>Rs.988</p>
+                <p>Rs.12999</p>
             </div>
             <div class="col-4">
-                <img src="images/pro8-biba-3039.png" alt="" />
-                <h4>Biba Dress</h4>
+                <a href="BT4.html">
+                <img src="images/Screenshot 2023-03-29 140808.png" alt="" /></a><a href="BT4.html">
+                <h4>OKAYA OPHT18060 TT Tubular Inverter Battery  (150 AH)</h4></a>
                 <div class="rating">
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
@@ -187,13 +194,14 @@
                     <i class="fa fa-star-half-o"></i>
                     <i class="fa fa-star-o"></i>
                 </div>
-                <p>Rs.3039</p>
+                <p>Rs.12499</p>
             </div>
         </div>
         <div class="row">
             <div class="col-4">
-                <img src="images/pro9-dorothy perkins-1245.png" alt="" />
-                <h4>Dorothy Perkins Skirt</h4>
+                <a href="BT5.html">
+                <img src="images/34a2e049-4f9a-4eb0-9070-dccd58e450aa_SC 18060 battery-1.png" alt="" /></a><a href="BT5.html">
+                <h4>LUMINOUS SC 18060 Tubular Inverter Battery  (150Ah)</h4></a>
                 <div class="rating">
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
@@ -201,11 +209,12 @@
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star-o"></i>
                 </div>
-                <p>Rs.1245</p>
+                <p>Rs.13499</p>
             </div>
             <div class="col-4">
-                <img src="images/pro10-bobbi brown-5600.png" alt="" />
-                <h4>Bobbi Brown Cream</h4>
+                <a href="BT6.html">
+                <img src="images/51b027b4-73ee-4fd8-a645-5809cf152dd2_ILTT 25060 battery-1.png" alt="" /></a><a href="BT6.html">
+                <h4>LUMINOUS ILTT25060 200Ah Tall Tubular Inverter Battery  (200Ah)</h4></a>
                 <div class="rating">
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
@@ -213,11 +222,12 @@
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star-half-o"></i>
                 </div>
-                <p>Rs.5600</p>
+                <p>Rs.17999</p>
             </div>
             <div class="col-4">
-                <img src="images/pro11-AccessHer-39500.png" alt="" />
-                <h4>Access Her necklace</h4>
+                <a href="BT7.html">
+                <img src="images/51IQ0cg718S.jpg" alt="" /></a><a href="BT7.html">
+                <h4>Livguard Invertuff IT1666TT 160AH</h4></a>
                 <div class="rating">
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
@@ -225,11 +235,12 @@
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star-o"></i>
                 </div>
-                <p>Rs.39500</p>
+                <p>Rs.13999</p>
             </div>
             <div class="col-4">
-                <img src="images/pro12-fossil-14296.png" alt="" />
-                <h4>Fossil Smart Watch</h4>
+                <a href="BT8.html">
+                <img src="images/Screenshot 2023-03-29 141813.png" alt="" /></a><a href="BT8.html">
+                <h4>Massimo MSC 1800 36X60 TT Tubular Inverter Battery  (150Ah)</h4></a>
                 <div class="rating">
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
@@ -237,7 +248,7 @@
                     <i class="fa fa-star-half-o"></i>
                     <i class="fa fa-star-o"></i>
                 </div>
-                <p>Rs.14296</p>
+                <p>Rs.11999</p>
             </div>
         </div>
     </div>
@@ -245,46 +256,20 @@
         <div class="small-container">
             <div class="row">
                 <div class="col-2">
-                    <img src="images/offer/shopping.png" alt="" class="offer-img" />
+                    <img src="images/vehicle battery.png" alt="" class="offer-img" />
                 </div>
                 <div class="col-2">
                     <p>Exclusively Available</p>
-                    <h1>Apple watch series 5</h1>
+                    <h1>Vehicle Batteries</h1>
                     <small>
-                        With a new Always-On Retina display, Apple Watch Series 5 is
-                        always there for you. To monitor your health, help you stay fit
-                        and keep you connected.
+                        An automotive battery is a rechargeable battery that is used 
+                        to start a motor vehicle. Its main purpose is to provide an electric current
+                        to the electric-powered starting motor, which in turn starts the 
+                        chemically-powered internal combustion engine that actually propels the vehicle.
                     </small>
+                    <br>
                     <a href="#" class="btn">Buy Now &#8594;</a>
                 </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="testimonial">
-        <div class="small-container">
-            <div class="row">
-                <div class="col-3">
-                    <i class="fa fa-quote-left"></i>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam
-                        temporibus non sapiente nemo autem illo! Ea sunt corporis officia
-                        inventore.
-                    </p>
-
-                    <img src="images/user-1.png" alt="">
-                    <h3>Harish Khemani</h3>
-                </div>
-                <div class="col-3">
-                    <i class="fa fa-quote-left"></i>
-                    <p>
-                     Son of Mr. Harish Khemani.The Developer of this website
-                    </p>
-
-                    <img src="images/user-2.png" alt="">
-                    <h3>Pranav Khemani</h3>
-                </div>
-
             </div>
         </div>
     </div>
@@ -348,7 +333,7 @@
                 </div>
             </div>
             <hr>
-            <p class="copyright">Copyright &copy; 2022 - www.newindiabattery.in</p>
+            <p class="copyright">Copyright &copy; 2023 - www.newindiabattery.in</p>
         </div>
     </div>
 
