--- a/IN3.html
+++ b/IN3.html
@@ -41,20 +41,11 @@
     <div class="small-container single-product">
         <div class="row">
             <div class="col-2">
-                <img src="images/gal1.png" alt="" width="100%" id="ProductImg">
+                <img src="images/jadoo-700-bg.jpg" alt="" width="100%" id="ProductImg">
 
                 <div class="small-img-row">
                     <div class="small-img-col">
-                        <img src="images/gal1.png" alt="" width="100%" class="small-img">
-                    </div>
-                    <div class="small-img-col">
-                        <img src="images/gal2.png" alt="" width="100%" class="small-img">
-                    </div>
-                    <div class="small-img-col">
-                        <img src="images/gal3.png" alt="" width="100%" class="small-img">
-                    </div>
-                    <div class="small-img-col">
-                        <img src="images/gal4.png" alt="" width="100%" class="small-img">
+                        <img src="images/jadoo-700-bg.jpg" alt="" width="100%" class="small-img">
                     </div>
 
 
@@ -62,93 +53,22 @@
 
             </div>
             <div class="col-2">
-                <p>Home / SweatShirt</p>
-                <h1>Cavaliers SweatShirt by Nike</h1>
-                <h4>Rs.3695</h4>
-                <select>
-                    <option>Select Size</option>
-                    <option>XXL</option>
-                    <option>XL</option>
-                    <option>L</option>
-                    <option>M</option>
-                    <option>S</option>
-                </select>
+                <p>Home / Inverter</p>
+                <h1>V-Guard Jaadoo 700 Square Wave Inverter</h1>
+                <h4>Rs.3800</h4>
                 <input type="number" value="1">
                 <a href="" class="btn">Add to Cart</a>
                 <h3>Product Details <i class="fa fa-indent"></i></h3>
                 <br>
-                <p>Cleveland Cavaliers Nike Spotlight Men's NBA Hoodie PLAY WITH PRIDE. Cleveland Cavaliers Nike
-                    Spotlight Men's NBA Hoodie keeps you feeling comfortable and agile on the practice court. Inspired
-                    by the authentic, on-court NBA warm-up, this pullover is made from durable knit fabric that's
-                    powered by sweat-wicking Dri-FIT technology.</p>
+                <p>Capable to run all types of loads like room coolers, mixer grinders, and LED Bulbs within capacity for stress-free appliance use
+                    Selectable battery charging mode for different battery technologies (Tubular / Flat / Local batteries) and capacities (65 Ah to 100 Ah) for convenient use.
+                    Fuzzy logic-based sensor less battery water topping reminder for greater convenience
+                    Digital Signal Controller-based design with pseudo sinewave output
+                    Battery Gravity Builder with overcharge and deep discharge protection for enhanced durability.
+                    Controlled output voltage in UPS mode for increased safety.</p>
             </div>
         </div>
     </div>
-
-
-    <div class="small-container">
-        <div class="row row-2">
-            <h2>Related Products</h2>
-            <p>View More</p>
-        </div>
-    </div>
-
-    <div class="small-container">
-
-
-        <div class="row">
-            <div class="col-4">
-                <img src="images/pro1-nike-3695.png" alt="" />
-                <h4>Cavaliers SweatShirt by Nike</h4>
-                <div class="rating">
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star-o"></i>
-                </div>
-                <p>Rs.3695</p>
-            </div>
-            <div class="col-4">
-                <img src="images/pro2-Polo Ralph Lauren-12990.png" alt="" />
-                <h4>Polo Ralph Lauren</h4>
-                <div class="rating">
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star-half-o"></i>
-                </div>
-                <p>Rs.12990</p>
-            </div>
-            <div class="col-4">
-                <img src="images/pro3-allen solly - 2369.png" alt="" />
-                <h4>Allen Solly Shirt</h4>
-                <div class="rating">
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star-o"></i>
-                </div>
-                <p>Rs.2369</p>
-            </div>
-            <div class="col-4">
-                <img src="images/pro4-h&m-1499.png" alt="" />
-                <h4>H&M SweatShirt</h4>
-                <div class="rating">
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star-half-o"></i>
-                    <i class="fa fa-star-o"></i>
-                </div>
-                <p>Rs.1499</p>
-            </div>
-        </div>
-    </div>
-    </div>
-
 
 
     <div class="footer">
@@ -186,7 +106,7 @@
                 </div>
             </div>
             <hr>
-            <p class="copyright">Copyright &copy; 2022 - www.newindiabattery.in</p>
+            <p class="copyright">Copyright &copy; 2023 - www.newindiabattery.in</p>
         </div>
     </div>
 
