--- a/products.html
+++ b/products.html
@@ -46,14 +46,19 @@
                 <option>Price High to Low</option>
                 <option>By Popularity</option>
                 <option>By Rating</option>
-                <option>By Sale</option>
             </select>
         </div>
 
         <div class="row">
             <div class="col-4">
-                <img src="images/INA1.jpg" alt="" />
-                <h4>Super Power Digital UPS Model 900 (12V) DG</h4>
+                <a href="IN1.html">
+
+                    <img src="images/INA1.jpg" alt="" />
+                </a>
+                <a href="IN1.html">
+
+                    <h4>Super Power Digital UPS Model 900 (12V) DG</h4>
+                </a>
                 <div class="rating">
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
@@ -64,8 +69,13 @@
                 <p>Rs.4199</p>
             </div>
             <div class="col-4">
+                <a href="IN2.html">
+
                 <img src="images/INB1.png" alt="" />
+                </a>
+                <a href="IN2.html">
                 <h4>Luminous Zelio+ 1100 Home Pure Sinewave Inverter UPS - Black</h4>
+                </a>
                 <div class="rating">
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
@@ -76,8 +86,12 @@
                 <p>Rs.6499</p>
             </div>
             <div class="col-4">
-                <img src="images/INC1.png" alt="" />
-                <h4></h4>
+                <a href="IN3.html">
+                <img src="images/jadoo-700-bg.jpg" alt="" />
+                </a>
+                <a href="IN3.html">
+                <h4>V-Guard Jaadoo 700 Square Wave Inverter</h4>
+                </a>
                 <div class="rating">
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
@@ -85,11 +99,16 @@
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star-o"></i>
                 </div>
-                <p>Rs.2369</p>
+                <p>Rs.3800</p>
             </div>
             <div class="col-4">
-                <img src="images/pro4-h&m-1499.png" alt="" />
-                <h4>H&M SweatShirt</h4>
+                <a href="IN4.html">
+                <img src="images/Livguard i2-Verter LG 1100 Square Wave Inverter.png" alt="" />
+                </a>
+                <a href="IN4.html">
+                <h4>Livguard i2-Verter LG 1100 Square Wave Inverter
+                </h4>
+                </a>
                 <div class="rating">
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
@@ -97,13 +116,15 @@
                     <i class="fa fa-star-half-o"></i>
                     <i class="fa fa-star-o"></i>
                 </div>
-                <p>Rs.1499</p>
+                <p>Rs.4700</p>
             </div>
         </div>
         <div class="row">
             <div class="col-4">
-                <img src="images/pro5-calvinK-4199.png" alt="" />
-                <h4>Calvin Klein Sweater</h4>
+                <a href="BT1.html">
+                <img src="images/Screenshot 2023-03-29 133547.png" alt="" />
+                </a><a href="BT1.html">
+                <h4>Livguard IT 1550TT Inverter Battery</h4></a>
                 <div class="rating">
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
@@ -111,11 +132,13 @@
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star-o"></i>
                 </div>
-                <p>Rs.4199</p>
+                <p>Rs.12999</p>
             </div>
             <div class="col-4">
-                <img src="images/pro6-SELECTED-11499.png" alt="" />
-                <h4>SELECTED Blazer</h4>
+                <a href="BT2.html">
+                <img src="images/Screenshot 2023-03-29 135234.png" alt="" /></a>
+                <a href="BT2.html">
+                <h4>Microtek Mtek Power ET648+ 150Ah (36+12)</h4></a>
                 <div class="rating">
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
@@ -123,11 +146,12 @@
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star-half-o"></i>
                 </div>
-                <p>Rs.11499</p>
+                <p>Rs.12499</p>
             </div>
             <div class="col-4">
-                <img src="images/pro7-anubhutte-988.png" alt="" />
-                <h4>Anubhutte Dress</h4>
+                <a href="BT3.html">
+                <img src="images/Screenshot 2023-03-29 135928.png" alt="" /></a><a href="BT3.html">
+                <h4>Luminous Inverlast ILTJ18148 150 Ah Tall Jumbo Inverter Battery</h4></a>
                 <div class="rating">
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
@@ -135,11 +159,12 @@
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star-o"></i>
                 </div>
-                <p>Rs.988</p>
+                <p>Rs.12999</p>
             </div>
             <div class="col-4">
-                <img src="images/pro8-biba-3039.png" alt="" />
-                <h4>Biba Dress</h4>
+                <a href="BT4.html">
+                <img src="images/Screenshot 2023-03-29 140808.png" alt="" /></a><a href="BT4.html">
+                <h4>OKAYA OPHT18060 TT Tubular Inverter Battery  (150 AH)</h4></a>
                 <div class="rating">
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
@@ -147,13 +172,14 @@
                     <i class="fa fa-star-half-o"></i>
                     <i class="fa fa-star-o"></i>
                 </div>
-                <p>Rs.3039</p>
+                <p>Rs.12499</p>
             </div>
         </div>
         <div class="row">
             <div class="col-4">
-                <img src="images/pro9-dorothy perkins-1245.png" alt="" />
-                <h4>Dorothy Perkins Skirts</h4>
+                <a href="BT5.html">
+                <img src="images/34a2e049-4f9a-4eb0-9070-dccd58e450aa_SC 18060 battery-1.png" alt="" /></a><a href="BT5.html">
+                <h4>LUMINOUS SC 18060 Tubular Inverter Battery  (150Ah)</h4></a>
                 <div class="rating">
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
@@ -161,7 +187,58 @@
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star-o"></i>
                 </div>
-                <p>Rs.1245</p>
+                <p>Rs.13499</p>
+            </div>
+            <div class="col-4">
+                <a href="BT6.html">
+                <img src="images/51b027b4-73ee-4fd8-a645-5809cf152dd2_ILTT 25060 battery-1.png" alt="" /></a><a href="BT6.html">
+                <h4>LUMINOUS ILTT25060 200Ah Tall Tubular Inverter Battery  (200Ah)</h4></a>
+                <div class="rating">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star-half-o"></i>
+                </div>
+                <p>Rs.17999</p>
+            </div>
+            <div class="col-4">
+                <a href="BT7.html">
+                <img src="images/51IQ0cg718S.jpg" alt="" /></a><a href="BT7.html">
+                <h4>Livguard Invertuff IT1666TT 160AH</h4></a>
+                <div class="rating">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star-o"></i>
+                </div>
+                <p>Rs.13999</p>
+            </div>
+            <div class="col-4">
+                <a href="BT8.html">
+                <img src="images/Screenshot 2023-03-29 141813.png" alt="" /></a><a href="BT8.html">
+                <h4>Massimo MSC 1800 36X60 TT Tubular Inverter Battery  (150Ah)</h4></a>
+                <div class="rating">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star-half-o"></i>
+                    <i class="fa fa-star-o"></i>
+                </div>
+                <p>Rs.11999</p>
+            </div>
+            <div class="col-4">
+                <img src="images/pro10-bobbi brown-5600.png" alt="" />
+                <h4>Bobbi Brown Cream</h4>
+                <div class="rating">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star-half-o"></i>
+                </div>
+                <p>Rs.5600</p>
             </div>
             <div class="col-4">
                 <img src="images/pro10-bobbi brown-5600.png" alt="" />
